--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,7 @@ header {
     position: sticky;
 }
 .header__topmenu_contacts {
-    width: 20%;
+    width: 30%;
 }
 
 .img-top-menu {
@@ -64,4 +64,38 @@ header {
         0 0 90px #0ff,
         0 0 100px #0ff,
         0 0 150px #0ff;
+}
+
+@media screen and (max-width: 767px) {
+    .navbar-sm {
+        display: flex;
+        flex-direction: column;
+    }
+    .row_menu {
+        width: 100%;
+        justify-content: space-between;
+    }
+    .header__menu {
+        width: 100% !important;
+    }
+    .header__topmenu_contacts {
+        width: 100%;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .header__topmenu_contacts {
+        width: 60%;
+    }
+    .menu-list-top {
+        width: 60%;
+    }
+    .header__logo {
+        display: none;
+    }
+    .header__menu {
+        width: 100%;
+    }
+    
 }
